# qrqrpar

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: publish.yml  rust_checks.yml
src/: bits.rs  canvas.rs  coding.rs  ec.rs  lib.rs  render.rs  types.rs
