[package]
name = "qrqrpar"
version = "0.1.5"
edition = "2021"
description = "A QR code generator supporting rMQR"
readme = "README.md"
repository = "https://github.com/Nakanishi123/qrqrpar"
license = "BSD-3-Clause"
keywords = ["qrcode", "rmqr"]

[dependencies]
resvg = "0.36.0"
hashbrown = "0.14.3"

[dev-dependencies]
tempdir = "0.3.7"
